ontocode-rs/tui/src/snapshots/ontocode_tui__app__tests__agent_picker_item_name.snap
---
source: tui/src/app/tests.rs
assertion_line: 3278
expression: snapshot
---
Main [default] | 00000000-0000-0000-0000-000000000123
Robie [explorer] | 00000000-0000-0000-0000-000000000123
Robie | 00000000-0000-0000-0000-000000000123
[explorer] | 00000000-0000-0000-0000-000000000123
Agent | 00000000-0000-0000-0000-000000000123
